--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=login
-spring.datasource.url=jdbc:mysql://localhost:3306/login
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/login
+#spring.datasource.username=root
+#spring.datasource.password=rootpassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=root
 spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
